# ariadne-eval

./: .gitignore  GEMINI.md  README.de.md  README.es.md  README.md  README.ru.md  README.zh.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: truthmark-realize.prompt.md
.hermes/plans/: 2026-05-30-domain-naming-cleanup.md  2026-05-30-prevent-repeat-llm-evaluation.md
.truthmark/: config.yml
changes/: 2026-05-19-hermes-dashboard-plugin.md  2026-05-20-session-dashboard-inspector.md  2026-05-20-tiny-incident-classifier.md  2026-05-28-scheduler-watchdog-install.md
docs/: design.md
docs/ai/: agent-guidelines.md  repo-rules.md
docs/architecture/: system-overview.md
docs/plans/: ml-first-incident-eval-implementation-plan.md
docs/standards/: change-notes.md  mvp-implementation.md  versioning.md
docs/templates/: architecture-doc.md  behavior-doc.md  contract-doc.md  operations-doc.md  test-behavior-doc.md  workflow-doc.md
docs/truth/: README.md
docs/truthmark/: areas.md
examples/: config.yaml
research/: agent_instruction_health_evaluator_design1.md  dashboard_session_detail_drilldown_design.md  ml_first_incident_eval_design.md
tests/: test_bumps.py  test_cli.py  test_cli_review_jobs.py  test_dashboard_config_api.py  test_dashboard_plugin.py  test_dashboard_queries.py  test_db_and_signals.py  test_db_review_guards.py  test_hermes_reader.py  test_incident_features.py  test_incident_model.py  test_incident_routing.py  test_incidents.py  test_judge.py  test_judge_contract.py  test_normalize.py  test_scheduler.py  test_scheduler_bootstrap.py  test_scheduler_watchdog_contracts.py  test_tool_outcome_features.py  test_tool_outcome_reviewer_model.py  test_tool_outcome_routing.py
(+47 files in other folders)
