[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne-eval"
version = "0.4.0"
description = "Local instruction-health evaluator for Hermes Agent sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ml = ["scikit-learn>=1.4"]

[project.scripts]
agent-health = "agent_health.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_health"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_health/dashboard_plugin/dashboard" = "agent_health/dashboard_plugin/dashboard"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
